# IronRAG.GitRepos

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  repos.yaml.example  routing.yaml.example
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
src/gitrepos_connector/: __init__.py  __main__.py  adapter.py  config.py  git_client.py  mapping.py  observability.py  repos.py
tests/: conftest.py  test_adapter_local.py  test_mapping.py  test_repos_config.py
